--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
     "build": "tsc -p tsconfig.json",
+    "prestart": "npm run build",
     "start": "node dist/index.js",
     "lint": "eslint 'src/**' --ext .ts",
     "test": "jest"
@@ -18,7 +19,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
-  "@types/uuid": "^11.0.0",
+    "@types/uuid": "^11.0.0",
     "@types/jest": "^29.5.3",
     "@types/node": "^20.3.1",
     "@types/socket.io": "^3.0.2",
