Remove Vercel configuration files and update package.json scripts for build preparation

--- a/core/package.json
+++ b/core/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "build:esm": "tsc -p tsconfig.esm.json",
     "build:cjs": "tsc -p tsconfig.cjs.json",
-  "build": "npm run build:esm && npm run build:cjs",
+    "build": "npm run build:esm && npm run build:cjs",
+    "prepare": "npm run build",
     "test": "jest"
   },
   "devDependencies": {
