--- a/backend/package.json
+++ b/backend/package.json
@@ -13,13 +13,12 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "quoridor-core": "file:../core",
-    "socket.io": "^4.7.2",
-    "uuid": "^9.0.0"
+  "quoridor-core": "file:../core",
+  "socket.io": "^4.7.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
-    "@types/uuid": "^11.0.0",
+    
     "@types/jest": "^29.5.3",
     "@types/node": "^20.3.1",
     "@types/socket.io": "^3.0.2",
