--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   "scripts": {
     "build:core": "cd core && npm ci && npm run build",
     "build:backend": "cd backend && npm ci && npm run build",
-    "build": "npm run build:core && npm run build:backend",
+    "build:frontend": "cd frontend && npm ci && npm run build",
+    "build_backend": "npm run build:core && npm run build:backend",
+    "build_frontend": "npm run build:core && npm run build:frontend",
     "start": "cd backend && npm start"
   }
 }
